tests/baselines/reference/generatorTypeCheck7.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck7.ts(4,17): error TS2741: Property 'hello' is missing in type 'IterableIterator<number>' but required in type 'WeirdIter'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck7.ts (1 errors) ====
    interface WeirdIter extends IterableIterator<number> {
        hello: string;
    }
    function* g1(): WeirdIter { }
                    ~~~~~~~~~
!!! error TS2741: Property 'hello' is missing in type '{|IterableIterator|0|}<number>' but required in type '{|WeirdIter|1|}'.
!!! related TS2728 tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck7.ts:2:5: 'hello' is declared here.
!!! annotated symbol 0 /.ts/lib.es2015.iterable.d.ts:46:11
!!! annotated symbol 1 tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck7.ts:1:11